correction bugs et failles de sécurité

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_HOST=localhost
-DB_USER=samuel  # Votre utilisateur (A MODIFIER)
-DB_PASSWORD=1234 # Votre mot de passe (A MODIFIER)
+DB_USER=root  # Votre utilisateur (A MODIFIER)
+DB_PASSWORD=Jeanroger251! # Votre mot de passe (A MODIFIER)
 DB_NAME=potatao
